# allocation

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  tests.yml
allocation/: __init__.py  backtest.py  base.py  baselines.py  constraints.py  convex.py  costs.py  diagnostics.py  factor.py  keyed.py  moments.py  schur.py  thurstone.py  universe.py
allocation/_schur/: coupling.py  seriation.py
allocation/_thurstone/: ability.py  calibrate.py  covariance.py  diagonal.py  transport.py
docs/: CNAME  index.html
docs/demos/: index.html
docs/maps/: tail-black-litterman.html
docs/papers/: index.html
experiments/: bowling_assets.py  bowling_lab.py  bowling_sim.py  coalition_credit.py  copula_hazard_jumps.py  credit_attribution.py  dow_study.py  feature_attribution.py  gen_tail_bl_data.py  m4_combination.py  moe_router.py  outside_option.py  preconditioner.py  rating_clone.py  scale_oos.py  scale_study.py  shapley_bridge.py  shapley_complexity.py  substitutability.py  tail_bl_lab.py  tail_black_litterman.py  tail_consistency_demo.py  tail_study.py  variable_selection.py
papers/: .gitignore  APPLICATIONS.md  README.md  _postprocess.py  build-web.sh  build.sh  credit-contagion-literature.md  refs.bib  web-template.html
tests/: test_backtest.py  test_baselines.py  test_constraints.py  test_convex.py  test_costs.py  test_diagnostics.py  test_downside.py  test_factor.py  test_schur.py  test_schur_vs_skfolio.py  test_skfolio.py  test_streaming.py  test_thurstone.py  test_thurstone_factors.py  test_thurstone_samplers.py
(+22 files in other folders)
