[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allocation"
version = "0.0.1"
description = "Online (streaming) portfolio construction: scikit-learn / skfolio-compatible estimators over a keyed dynamic universe"
authors = [{name = "Peter Cotton", email = "peter.cotton@microprediction.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "thurstone>=0.1.0",
]

[project.optional-dependencies]
scale = ["scipy>=1.10"]        # sparse/iterative Fiedler solver for large universes
skfolio = ["skfolio>=0.5"]
test = ["pytest>=7.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/microprediction/allocation"

[tool.setuptools.packages.find]
where = ["."]
include = ["allocation*"]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
